<resources>
    <string name="app_name">WordsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word">Word</string>
    <string name="definitions">Definitions</string>
    <string name="image">Image</string>
    <string name="status">Status</string>
    <string name="test">Test</string>
    <string name="activated">Activated</string>
    <string name="textview">TextView</string>
    <string name="search">Search</string>
    <string name="plus_button">+</string>
    <string name="word_search">Word Search</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="a_button_to_return_to_the_previous_screen">A button to return to the previous screen.</string>
    <string name="word_definition">Word Definition</string>
    <string name="add_word">Add Word</string>
    <string name="search_for_words_here">Search for words here:</string>
    <string name="add_word_button">Add Word</string>
    <string name="add_word_menu">Add Word Menu</string>
</resources>