<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="@string/search_for_words_here"
    tools:context=".screens.WordSearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="409dp"
        android:layout_height="54dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/viewName"
            android:layout_width="179dp"
            android:layout_height="36dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/word_search"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="87dp"
            android:layout_height="47dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/a_button_to_return_to_the_previous_screen"
            android:src="@android:drawable/ic_menu_revert"
            app:layout_constraintEnd_toStartOf="@+id/viewName"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="398dp"
        android:layout_height="67dp"
        android:layout_marginTop="7dp"
        android:autofillHints="@string/search_for_words_here"
        android:hint="@string/search_for_words_here"
        android:textColorHint="#919492"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wordSearchList"
        android:layout_width="386dp"
        android:layout_height="493dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" >

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>